--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -1,3 +1,15 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: jill-pill
+spec:
+  type: ClusterIP
+  ports:
+    - port: 80
+      targetPort: 3080
+  selector:
+    app: jill-pill
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
