--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,7 +4,12 @@ metadata:
   name: jill-pill
   annotations:
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+    - hosts:
+        - thejillpill.com
+      secretName: jill-pill-tls
   rules:
     - host: thejillpill.com
       http:
