--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "npm run lint:js && npm run lint:style"
   },
   "dependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "contentful": "^7.14.6",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.10",
