--- a/.github/workflows/stale-prs.yml
+++ b/.github/workflows/stale-prs.yml
@@ -1,6 +1,10 @@
 name: 'Close stale issues and PRs'
 description: 'Close issues and pull requests with no recent activity'
 
+on:
+  schedule:
+    - cron: '30 1 * * *'
+
 jobs:
   stale:
     runs-on: ubuntu-latest
